--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       <a href="#navbar" target="_self" rel="noopener">Link to the Header</a>
     </main>
     <footer>
-      <p>&copy; 2024 My Web Page</p>
+      <p>&copy; 2024 My Web Page - Carla</p>
     </footer>
   </body>
 </html>
